fixed extra margin in work html

--- a/style/main.scss
+++ b/style/main.scss
@@ -208,7 +208,7 @@ h3 {
     }
 
     &__img {
-        width: 100%;
+        width: 450px;
         object-fit: cover;
     }
 
@@ -218,7 +218,7 @@ h3 {
     }
 
     &__project {
-        width: 450px;
+        max-width: 100vw;
     }
 
 }
